[tool.poetry]
name = "incredible-sudoku"
version = "0.1.0"
description = "Unleash Your Inner Genius"
authors = ["DanielMuringe <danielmuringe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
